--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-PATH_FILE_Film=http://localhost:5000/uploads/film/
-PATH_FILE_PP=http://localhost:5000/uploads/photoProfile/
-PATH_FILE_TF=http://localhost:5000/uploads/transfer/
+PATH_FILE_Film=be-cinema-online.herokuapp.com/uploads/film/
+PATH_FILE_PP=be-cinema-online.herokuapp.com/uploads/photoProfile/
+PATH_FILE_TF=be-cinema-online.herokuapp.com/uploads/transfer/
 TOKEN_KEY=BismillahTahunIniNikah
