--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
+PATH_Film=be-cinema-online.herokuapp.com/uploads/film/
+PATH_PP=be-cinema-online.herokuapp.com/uploads/photoProfile/
+PATH_TF=be-cinema-online.herokuapp.com/uploads/transfer/
 TOKEN_KEY=BismillahTahunIniNikah
