--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-PATH_FILE_Film=test
-PATH_FILE_PP=be-cinema-online.herokuapp.com/uploads/photoProfile/
-PATH_FILE_TF=be-cinema-online.herokuapp.com/uploads/transfer/
+PATH_FILE_Film=https://be-cinema-online.herokuapp.com/uploads/film/
+PATH_FILE_PP=https://be-cinema-online.herokuapp.com/uploads/photoProfile/
+PATH_FILE_TF=https://be-cinema-online.herokuapp.com/uploads/transfer/
 TOKEN_KEY=BismillahTahunIniNikah
