--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-PATH_FILE_Film=https://be-cinema-online.herokuapp.com/uploads/film/
+PATH_FILE_FILM=https://be-cinema-online.herokuapp.com/uploads/film/
 PATH_FILE_PP=https://be-cinema-online.herokuapp.com/uploads/photoProfile/
 PATH_FILE_TF=https://be-cinema-online.herokuapp.com/uploads/transfer/
 TOKEN_KEY=BismillahTahunIniNikah
