--- a/.env
+++ b/.env
@@ -1,4 +1,9 @@
-PATH_FILE_FILM=https://be-cinema-online.herokuapp.com/uploads/film/
-PATH_FILE_PP=https://be-cinema-online.herokuapp.com/uploads/photoProfile/
-PATH_FILE_TF=https://be-cinema-online.herokuapp.com/uploads/transfer/
+PATH_FILE_FILM=https://res.cloudinary.com/dani-deploy/image/upload/v1647004104/cinema-online/film/
+PATH_FILE_PP=https://res.cloudinary.com/dani-deploy/image/upload/v1647004104/cinema-online/photoProfile/
+PATH_FILE_TF=https://res.cloudinary.com/dani-deploy/image/upload/v1647004104/cinema-online/transfer/
+
 TOKEN_KEY=BismillahTahunIniNikah
+
+CLOUDINARY_NAME=dani-deploy
+CLOUDINARY_API_KEY=929521142496549
+CLOUDINARY_API_SECRET=xv6oEk76YvVgpHQBuwYnV77H5lA
