--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "client": "npm start --prefix ../nis-online-cinema",
+    "dev": "concurrently \"npm start\" \"npm run client\""
   },
   "author": "dani",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cloudinary": "^1.28.1",
     "concurrently": "^7.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
@@ -19,8 +22,8 @@
     "multer": "^1.4.4",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
-    "rupiah-format": "^1.0.0",
     "pg": "^8.7.3",
+    "rupiah-format": "^1.0.0",
     "sequelize": "^6.16.1",
     "sequelize-cli": "^6.4.1"
   }
