--- a/.env
+++ b/.env
@@ -4,3 +4,8 @@ PATH_FILE_TF=https://res.cloudinary.com/dani-deploy/image/upload/v1647427234/cin
 
 TOKEN_KEY=BismillahTahunIniNikah
 
+PORT=3001
+
+CLOUDINARY_NAME=dani-deploy
+CLOUDINARY_API_KEY=929521142496549
+CLOUDINARY_API_SECRET=xv6oEk76YvVgpHQBuwYnV77H5lA
