--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "client": "npm start --prefix ../nis-online-cinema",
-    "dev": "concurrently \"npm start\" \"npm run client\""
+    "dev": "nodemon index.js"
   },
   "author": "dani",
   "license": "ISC",
@@ -21,10 +21,12 @@
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.4",
     "mysql2": "^2.3.3",
-    "nodemon": "^2.0.15",
     "pg": "^8.7.3",
     "rupiah-format": "^1.0.0",
     "sequelize": "^6.16.1",
     "sequelize-cli": "^6.4.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
