--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -7,7 +7,7 @@ on:
 
 env:
   NODE_VERSION: 22.15.0
-  DOCKER_IMAGE: ghcr.io/${{ github.repository_owner }}/BE-CinemaOnline
+  DOCKER_IMAGE: ghcr.io/${{ github.repository_owner }}/be-cinemaonline
   SSH_HOST: ${{ secrets.SSH_HOST }}
   SSH_USER: ${{ secrets.SSH_USER }}
   SSH_PORT: ${{ secrets.SSH_PORT || '22' }}
