--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -135,7 +135,7 @@ jobs:
             -e PATH_FILE_PP='${{ secrets.PATH_FILE_PP }}' \
             -e PATH_FILE_TF='${{ secrets.PATH_FILE_TF }}' \
             -e TOKEN_KEY='${{ secrets.TOKEN_KEY }}' \
-            -e PORT='${{ secrets.PORT }}' \
+            -e PORT='${{ vars.PORT }}' \
             -e DATABASE_HOST='${{ secrets.DATABASE_HOST }}' \
             -e DATABASE_PORT='${{ secrets.DATABASE_PORT }}' \
             -e DATABASE_NAME='${{ secrets.DATABASE_NAME }}' \
